Clean up a bit. Breaks Unit 2. Enable https.

--- a/app.yaml
+++ b/app.yaml
@@ -7,9 +7,11 @@ threadsafe: true
 handlers:
 - url: /static
   static_dir: static
+  secure: always
 
 - url: /.*
   script: blog.app
+  secure: always
 
 libraries:
 - name: jinja2
